# splici

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  main.rs  utils.rs
src/functions/: introns.rs  mod.rs
src/io/: io.rs  mod.rs
src/types/: exon_record.rs  mod.rs  translater.rs
